WIP m5stack cardputer
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -195,6 +195,8 @@ source "drivers/gpio/Kconfig.gd32"
 
 source "drivers/gpio/Kconfig.xlnx_ps"
 
+source "drivers/gpio/Kconfig.sn74hc138"
+
 source "drivers/gpio/Kconfig.sn74hc595"
 
 source "drivers/gpio/Kconfig.mchp_mss"
